frontend: prevent flicker when unlocking the device
The BBApp did route back to / after unlocking the device, that
caused a quick flicker because it rendered the waiting view one
more time.

Unlocking can directly be routed to account-summary view, to
prevent flickering.

- removed noAccount on account summary in favor of loading msg
- updated buy.info.noAccount wording

TODO: update locize

--- a/frontends/web/src/routes/account/summary/accountssummary.css
+++ b/frontends/web/src/routes/account/summary/accountssummary.css
@@ -62,6 +62,11 @@
     white-space: nowrap;
 }
 
+.table tr td.loadingAccounts {
+    color: var(--color-gray);
+    text-align: center;
+}
+
 .table tfoot th,
 .table tfoot td {
     background-color: var(--color-mediumgray);
